[Collections] Added few more methods